2007-05-25  Frederic Ruaudel <grumz@grumz.net>
	* libnautilus-actions/nautilus-actions-config-gconf.c:
	* libnautilus-actions/nautilus-actions-config.c:
	* libnautilus-actions/nautilus-actions-config.h:
	* nact/nact-editor.c: Change the definition of the function 
	nautilus_actions_config_action_add_profile () to manage error
	when the profile name already exists.

	* nact/nact-profile-editor.c: Implement duplication of a profile

2007-05-24  Frederic Ruaudel <grumz@grumz.net>
	* nact/nautilus-actions-config.glade: Update the callbacks of all
	the profile editor dialog field.

	* nact/nact-profile-editor.c:
	* nact/nact-profile-editor.h:
	* nact/nact-editor.c:
	* nact/nact-utils.c:
	* nact/nact-utils.h: Implement addition and edition of the profile
	in Nact.

	* libnautilus-actions/nautilus-actions-config.h:
	* libnautilus-actions/nautilus-actions-config.c: Add functions to
	manage profiles more easily.

2007-05-23  Frederic Ruaudel <grumz@grumz.net>
	* nact/nact-editor.c: Move profile edition code to the new files
	nact/nact-profile-editor.[ch].

	* nact/nact-profile-editor.c:
	* nact/nact-profile-editor.h: Create these new files to manage
	profile edition code.

	* nact/Makefile.am: Add nact/nact-profile-editor.[ch] to the list of 
	file to compile for nact.


2007-05-22  Frederic Ruaudel <grumz@grumz.net>
	* nact/nact-editor.h:
	* nact/nact-editor.c: Try to set the legend dialog as non-modal (Bug 
	#337542). Start to implement the profile management gui part.
	Comment obsolete code to make Nact run for the tests.

2007-05-17  Frederic Ruaudel <grumz@grumz.net>
	* nact/nautilus-actions-config.glade: Update callback func names of the
	profiles edition button.

	* libnautilus-actions/nautilus-actions-config.c: Fix a bug when trying
	to add a new profile to an uninitialized actions'profiles hash.

2007-05-16  Frederic Ruaudel <grumz@grumz.net>
	* nact/nautilus-actions-config.glade: Update About dialog info